<resources>
    <string name="app_name">#atençãopeão</string>
    <string name="title_activity_incident_maps">Map</string>
    <string name="watch_out_big_cars">Watch out for big cars</string>
    <string name="stay_away">Stay away from big cars turning the corners</string>
    <string name="skip">Skip</string>
    <string name="facebook_app_id">864495967226572</string>
    <string name="fb_login_protocol_scheme">fb864495967226572</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guest_login"><u>Guest Sign In</u></string>
    <string name="by_sign_up">By signing up, I agree to <b>#atençãopeão\'s</b></string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="and"><![CDATA[&]]></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="select_region">Which region do you belong?</string>
    <string name="portugal">Portugal</string>
    <string name="brazil">Brazil</string>
    <string name="feed_desc">Lorem Ipsum is simply dummy text of the printing and andtypesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="linked_acccount">Linked account</string>
    <string name="notifications">Notifications</string>
    <string name="location_services">Location services</string>
    <string name="add_incident_location">Add incident location</string>
    <string name="delete_alert_text">Are you sure you want to delete this post?</string>

    <string name="add_your_current_location">Add your current location</string>
    <string name="or">Or</string>
    <string name="select_location_from_map">Select location from map</string>
    <string name="close">Close</string>
    <string name="please_wait">Please Wait...</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="acidente">Acidente</string>
    <string name="all_incidents">All incidents</string>
    <string name="road_safety_feed">Road Safety Feed</string>
    <string name="description">Description</string>
    <string name="incident_location">Incident location</string>
    <string name="incident_reported">incident reported</string>
    <string name="view_more">View more</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="next">Next</string>


    <string name="accident">Accident</string>
    <string name="necessary_intervention">Necessary Intervention</string>
    <string name="marcar_local">Marcar Local</string>
    <string name="incidents">Incidents</string>
    <string name="add_location">Add location</string>
    <string name="add_location_error">Please add incident location on map using long press</string>
    <string name="edit">Edit</string>
    <string name="incident_deleted_success">Incident has been deleted</string>
    <string name="incident_update">Incident has been updated</string>
    <string name="report_abuse_">Report abuse</string>
    <string name="add_description_here">Enter your description here</string>
    <string name="submit">Submit</string>
    <string name="incident_created">Incident has been created</string>
    <string name="report_abuse_msg">Abuse report has been submit</string>
    <string name="description_error">Please add description</string>
    <string name="comment_error">Please add your comment</string>
    <string name="profile">Profile</string>
    <string name="no_linked_account">No account linked.</string>
    <string name="upload_success">Image has been uploaded</string>
    <string name="file_not_found">File Not Found!</string>
    <string name="image_error">Please upload at least one image</string>
    <string name="add_image_validation">You can add only maximum three images</string>
    <string name="add_description">Add description</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="long_press_on_map">Please long press on map to add your location</string>
    <string name="are_you_sure_you_want_to_disable_location_services">Are you sure you want to disable your location services?</string>
    <string name="disable">Disable</string>
    <string name="successfully_added">Successfully Added!!!</string>
    <string name="view_in_map">View in map</string>
    <string name="share">Share</string>
    <string name="notification_recieved">A new notification has been received about the incident happened near to you</string>
    <string name="no_notification_found">No notification found.</string>
    <string name="incident_resolved">Incident Resolved</string>

    <string name="are_you_sure_you_want_to_reolved_incident">Are you sure you want to resolve this incident?</string>
    <string name="this_incident_resolved">this incident is resolved</string>
    <string name="incident_has_been_resolved">Incident has been resolved</string>
    <string name="are_you_sure_you_want_to_remove_this_image">Are you sure you want to remove this image?</string>
    <string name="incident_reported_text">There is a new incident reported in your area</string>
    <string name="incident_resolved_text">The reported incident in your area has been resolved , Click here to view images of the measures taken</string>
    <string name="incident_blocked_text">Your post has been blocked/deleted by the admin</string>
    <string name="internet_permission">No network connectivity - This App requires an internet connection.</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>

    <string name="contact_us">Contact Us</string>
    <string name="terms">Terms</string>
    <string name="privacy">Privacy</string>
    <string name="please_share_your_thought">Please share your thought on following email.</string>
    <string name="email">email.id@yourdomain.com</string>
    <string name="city_hall_search">Search city hall</string>
    <string name="city_halls">City halls</string>
    <string name="select_city_hall">Select city hall</string>
    <string name="please_select_city_hall">Please select city hall</string>
    <string name="incidents_reported">incidents reported</string>
    <string name="allow_location_services_">Allow location services</string>
    <string name="goto_incidents">Show incidents</string>
    <string name="instruction">Utilize o Mapa para marcar ou consultar locais que necessitam de intervenção. Clique em + para indicar o local, adicione até 3 fotografias, uma descrição e indique qual a Camâra Municipal que deve ser informada. Após validação, essa informação será enviada. Será notificado quando o estado da mesma evoluir. Participe para o bem de todos. Obrigado.</string>

</resources>
