<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/cross"
        android:id="@+id/ivCross"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/rlOrders"
        android:layout_centerInParent="true"
        android:background="@drawable/dailog_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_size_height">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/add_incident_location"
            android:layout_width="wrap_content"
            android:textSize="@dimen/slide_desc"
            android:textColor="@color/title_color"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_your_current_location"
            style="@style/RoundedCornerMaterialButtonYellow"
            />
            <TextView
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:text="@string/or"
                android:textSize="@dimen/slide_desc"
                android:textColor="@color/title_color"
                android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_your_current_location"
            style="@style/RoundedCornerMaterialButtonBlue"
            />
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
