<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llSortChangePopup"
    android:layout_width="330dp"
    android:paddingBottom="10dp"
    android:background="@drawable/card_pop_up"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <LinearLayout
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="40dp"
            android:orientation="vertical"
            android:layout_width="330dp"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvAccident"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/accident"
            android:textColor="@color/dark_yellow"
            android:textSize="@dimen/slide_desc" />
            <ImageView
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />
            <TextView
                android:id="@+id/tvNecessaryIntervention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/necessary_intervention"
                android:textColor="@color/dark_yellow"
                android:textSize="@dimen/slide_desc" />

    <ImageView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        />



        <TextView
            android:id="@+id/tvAllIncident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/all_incidents"
            android:textColor="@color/dark_yellow"
            android:textSize="@dimen/slide_desc" />

            <ImageView
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />
        </LinearLayout>

</RelativeLayout>