<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/cross"
        android:id="@+id/ivCross"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/rlOrders"
        android:layout_centerInParent="true"
        android:background="@drawable/dailog_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alert_dialog_size_height">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/delete_alert_text"
            android:layout_width="wrap_content"
            android:textSize="@dimen/slide_desc"
            android:padding="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/alert_margin_top"
            android:textColor="@color/title_color"
            android:layout_height="wrap_content" />




        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <Button
                style="@style/RoundedCornerMaterialButtonBlueOneCorner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/slide_desc"
                android:text="@string/cancel" />
            <Button
                style="@style/RoundedCornerMaterialButtonYellowOneCorner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/slide_desc"
                android:text="@string/delete" />
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
