<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/cross"
        android:id="@+id/ivCross"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/rlOrders"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alert_dialog_size_height">
        <LinearLayout
            android:background="@drawable/dailog_border"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="57dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/please_share_your_thought"
            android:layout_width="wrap_content"
            android:textSize="@dimen/slide_desc"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/title_color"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/tvMsg"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:textSize="@dimen/slide_desc"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_height="wrap_content" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <Button
                style="@style/RoundedCornerMaterialButtonBlueOneCorner"
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/slide_desc"
                android:text="@string/cancel" />

        </LinearLayout>
        </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/rsa_logo" />
    </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
